--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,13 @@
 		"debug": "~2.6.9",
 		"ejs": "~2.6.1",
 		"express": "~4.16.1",
+		"express-validator": "^6.10.0",
 		"file-system": "^2.2.2",
 		"http-errors": "~1.6.3",
 		"morgan": "~1.9.1",
 		"multer": "^1.4.2",
-		"uuid": "^8.3.2"
+		"uuid": "^8.3.2",
+		"yup": "^0.32.9"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.7"
